--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ContactsPdm</string>
     <string name="name">Name</string>
-    <string name="adress">Adress</string>
+    <string name="address">Address</string>
     <string name="phone">Phone</string>
     <string name="email">Email</string>
     <string name="salvar">Salvar</string>
