Feat: classroom changes, added context menu for deletion and edition of contacts, and added feature where you can see all the contact data when clicking the list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="email">Email</string>
     <string name="salvar">Salvar</string>
     <string name="adicionar_contato">Adicionar Contato</string>
+    <string name="remove_contact">Remove Contact</string>
+    <string name="edit_contact">Edit Contact</string>
 </resources>
